--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a href="">GIFT CARDS</a>
                         </li>
                     </ul>
-                </nav class="menu-nav">
+                </nav>
                 <div class="menu-entrance">
                     <div class="entrance-in_now">
                         <a href="" class="in-button button">Sign in</a>
