--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="header-menu">
                 <nav class="menu-nav">
                     <ul>
-                        <li class="nav-1">
+                        <li>
                             <a href="">MENU</a>
                         </li>
-                        <li class="nav-2">
+                        <li class="p-left">
                             <a href="">REWARDS</a>
                         </li>
-                        <li class="nav-3">
+                        <li class="p-left">
                             <a href="">GIFT CARDS</a>
                         </li>
                     </ul>
