--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Starbucks</title>
     <link rel="icon" type="image/png" href="https://www.starbucks.com/home/icons/pwa-icon-192.png" sizes="192x192">
-    <link rel="stylesheet" href="less/main.css">
+    <!--<link rel="stylesheet" href="less/main.css">-->
+    <style>
+        @import url("less/header.css");
+        @import url("less/footer.css");
+        @import url("less/section.css");
+    </style>
     <link rel="stylesheet" href="media/media.css">
 </head>
 
