--- a/menu.html
+++ b/menu.html
@@ -153,42 +153,49 @@
                             <div class="menu-item">
                                 <div class="img"><img src="images/_1.webp" alt=""></div>
                                 <h3>Hot Coffees</h3>
+                                <a href=""></a>
                             </div>
                         </div>
                         <div class="wraper-item">
                             <div class="menu-item">
                                 <div class="img"><img src="images/_2.webp" alt=""></div>
                                 <h3>Hot Teas</h3>
+                                <a href=""></a>
                             </div>
                         </div>
                         <div class="wraper-item">
                             <div class="menu-item">
                                 <div class="img"><img src="images/_3.webp" alt=""></div>
                                 <h3>Hot Drinks</h3>
+                                <a href=""></a>
                             </div>
                         </div>
                         <div class="wraper-item">
                             <div class="menu-item">
                                 <div class="img"><img src="images/_4.webp" alt=""></div>
                                 <h3>Frappuccino® Blended Beverages</h3>
+                                <a href=""></a>
                             </div>
                         </div>
                         <div class="wraper-item">
                             <div class="menu-item">
                                 <div class="img"><img src="images/_5.webp" alt=""></div>
                                 <h3>Cold Coffees</h3>
+                                <a href=""></a>
                             </div>
                         </div>
                         <div class="wraper-item">
                             <div class="menu-item">
                                 <div class="img"><img src="images/_6.webp" alt=""></div>
                                 <h3>Iced Teas</h3>
+                                <a href=""></a>
                             </div>
                         </div>
                         <div class="wraper-item">
                             <div class="menu-item">
                                 <div class="img"><img src="images/_7.webp" alt=""></div>
                                 <h3>Cold Drinks</h3>
+                                <a href=""></a>
                             </div>
                         </div>
                     </div>
@@ -196,30 +203,105 @@
                 <section>
                     <h2>Food</h2>
                     <div class="menu">
-                        <div class="menu-item">
-                            <div class="img"><img src="" alt=""></div>
-                            <h3></h3>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_8.jpg" alt=""></div>
+                                <h3>Hot Breakfast</h3>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_9.jpg" alt=""></div>
+                                <h3>Bakery</h3>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_10.webp" alt=""></div>
+                                <h3>Lunch</h3>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_11.webp" alt=""></div>
+                                <h3>Snacks & Sweets</h3>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_12.jpg" alt=""></div>
+                                <h3>Yogurt & Custard</h3>
+                                <a href=""></a>
+                            </div>
                         </div>
                     </div>
                 </section>
                 <section>
                     <h2>At Home Coffee</h2>
                     <div class="menu">
-                        <div class="menu-item">
-                            <div class="img"><img src="" alt=""></div>
-                            <h3></h3>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_13.webp" alt=""></div>
+                                <h3>Whole Bean</h3>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_14.webp" alt=""></div>
+                                <h3>Verismo® Pods</h3>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_15.jpg" alt=""></div>
+                                <h3>VIA® Instant</h3>
+                                <a href=""></a>
+                            </div>
+                        </div>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_16.jpg" alt=""></div>
+                                <h3>Cold Brew</h3>
+                                <a href=""></a>
+                            </div>
                         </div>
                     </div>
                 </section>
                 <section>
                     <h2>Shopping Bags</h2>
                     <div class="menu">
-                        <div class="menu-item">
-                            <div class="img"><img src="" alt=""></div>
-                            <h3></h3>
+                        <div class="wraper-item">
+                            <div class="menu-item">
+                                <div class="img"><img src="images/_17.jpg" alt=""></div>
+                                <h3>Shopping Bags</h3>
+                                <a href=""></a>
+                            </div>
                         </div>
                     </div>
                 </section>
+            </div>
+        </div>
+    </div>
+    <div class="footer-fixed">
+        <div class="fixed-wraper">
+            <div class="wraper-choose_a_store">
+                <div class="choose_a_store">
+                    <a href="">
+                        <p class="media1020"> For item availability, choose a store</p>
+                        <p class="min1020"><span>For item availability</span>
+                            <strong>Choose a store</strong></p>
+                        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" style="width: 18px; height: 18px; overflow: visible;"><path d="M11.96 15.5c-.206 0-.402-.084-.546-.232l-5.188-5.33c-.3-.31-.3-.81 0-1.12.3-.31.79-.31 1.093 0l4.64 4.767 4.723-4.853c.3-.31.79-.31 1.09 0 .303.31.303.812.002 1.122l-5.27 5.414c-.145.148-.34.232-.546.232"></path></svg>
+                    </a>
+                </div>
+            </div>
+            <div class="open-card">
+                <div class="shop-svg"></div>
             </div>
         </div>
     </div>
