--- a/stories.html
+++ b/stories.html
@@ -7,10 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stories</title>
     <link rel="shortcut icon" href="https://stories.starbucks.com/favicon.ico">
-    <!--<link rel="stylesheet" href="/less/stories.css">-->
-    <style>
-        @import url("less/stories.css");
-    </style>
+    <link rel="stylesheet" href="/less/stories.css">
+    <link rel="stylesheet" href="media/stories-media.css">
 </head>
 
 <body>
@@ -189,10 +187,19 @@
                             <h2>Stay In Touch</h2>
                             <div class="signup-block">
                                 <form action="" class="signup-form">
-                                    <label for="" class="signup-label">Get Starbucks stories and news delivered. Subscribe</label>
+                                    <label for="" class="signup-label">Get Starbucks stories and news delivered.
+                                        Subscribe</label>
                                     <input type="text" placeholder="Enter your email address">
                                     <button class="signup-button">
-                                        <svg viewBox="0 0 24 24" class="sb-icon sb-signup__icon" aria-hidden="true"><title>chevron right</title><path d="M9.17 4.16l7.32 7.47a.53.53 0 0 1 0 .74l-7.32 7.47a.5.5 0 0 1-.37.16.5.5 0 0 1-.36-.16L7.66 19a.51.51 0 0 1 0-.74L13.83 12 7.66 5.7a.51.51 0 0 1 0-.74l.78-.8A.5.5 0 0 1 8.8 4a.5.5 0 0 1 .37.16z"></path><path d="M8.8 20.25a.78.78 0 0 1-.54-.25l-.78-.81a.75.75 0 0 1 0-1.08l6-6.13-6-6.13a.75.75 0 0 1 0-1.08L8.26 4a.76.76 0 0 1 1.08 0l7.33 7.48a.73.73 0 0 1 .22.54.79.79 0 0 1-.22.54L9.34 20a.71.71 0 0 1-.54.25zm0-16a.23.23 0 0 0-.18.09l-.78.8a.26.26 0 0 0-.09.19.29.29 0 0 0 .08.19L14.18 12l-6.34 6.48a.25.25 0 0 0 0 .38l.78.81c.15.15.22.14.37 0l7.32-7.48a.27.27 0 0 0 0-.38L9 4.33a.29.29 0 0 0-.2-.08z"></path></svg>
+                                        <svg viewBox="0 0 24 24" class="sb-icon sb-signup__icon" aria-hidden="true">
+                                            <title>chevron right</title>
+                                            <path
+                                                d="M9.17 4.16l7.32 7.47a.53.53 0 0 1 0 .74l-7.32 7.47a.5.5 0 0 1-.37.16.5.5 0 0 1-.36-.16L7.66 19a.51.51 0 0 1 0-.74L13.83 12 7.66 5.7a.51.51 0 0 1 0-.74l.78-.8A.5.5 0 0 1 8.8 4a.5.5 0 0 1 .37.16z">
+                                            </path>
+                                            <path
+                                                d="M8.8 20.25a.78.78 0 0 1-.54-.25l-.78-.81a.75.75 0 0 1 0-1.08l6-6.13-6-6.13a.75.75 0 0 1 0-1.08L8.26 4a.76.76 0 0 1 1.08 0l7.33 7.48a.73.73 0 0 1 .22.54.79.79 0 0 1-.22.54L9.34 20a.71.71 0 0 1-.54.25zm0-16a.23.23 0 0 0-.18.09l-.78.8a.26.26 0 0 0-.09.19.29.29 0 0 0 .08.19L14.18 12l-6.34 6.48a.25.25 0 0 0 0 .38l.78.81c.15.15.22.14.37 0l7.32-7.48a.27.27 0 0 0 0-.38L9 4.33a.29.29 0 0 0-.2-.08z">
+                                            </path>
+                                        </svg>
                                     </button>
                                 </form>
                             </div>
@@ -202,10 +209,26 @@
                                 <p>Give us a follow.</p>
                                 <div class="social-nav">
                                     <ul>
-                                        <li><a href=""><svg viewBox="0 0 12.35 24" class="sb-icon social-nav__icon"><path d="M9.09,0C5.86,0,3.65,2,3.65,5.64V8.79H0v4.26H3.65V24H8V13.05h3.64l.55-4.26H8V6.06C8,4.83,8.35,4,10.11,4h2.24V.17A30.13,30.13,0,0,0,9.09,0Z"></path></svg></a></li>
-                                        <li><a href=""><svg viewBox="0 0 24 19.69" class="sb-icon social-nav__icon"><path d="M24,2.33a9.57,9.57,0,0,1-2.83.78A5,5,0,0,0,23.34.36a9.75,9.75,0,0,1-3.13,1.21A4.89,4.89,0,0,0,16.62,0a5,5,0,0,0-4.93,5,5.22,5.22,0,0,0,.13,1.13A13.91,13.91,0,0,1,1.67.91,5,5,0,0,0,3.2,7.55,4.81,4.81,0,0,1,1,6.92.2.2,0,0,0,1,7a5,5,0,0,0,4,4.87A5,5,0,0,1,3.62,12,5.64,5.64,0,0,1,2.69,12a5,5,0,0,0,4.6,3.45,9.86,9.86,0,0,1-6.12,2.13A11.48,11.48,0,0,1,0,17.46a13.85,13.85,0,0,0,7.55,2.23c9.05,0,14-7.57,14-14.14,0-.22,0-.43,0-.65A10,10,0,0,0,24,2.33"></path></svg></a></li>
-                                        <li><a href=""><svg viewBox="0 0 24 24" class="sb-icon social-nav__icon"><path d="M7,0A7,7,0,0,0,0,7V17a7,7,0,0,0,7,7h10.1a7,7,0,0,0,7-7V7a7,7,0,0,0-6.95-7ZM7,2.06h10.1A4.86,4.86,0,0,1,21.94,7V17a4.86,4.86,0,0,1-4.89,4.9H7A4.86,4.86,0,0,1,2.06,17V7A4.86,4.86,0,0,1,7,2.06ZM18.44,4.13a1.44,1.44,0,1,0,1.44,1.44A1.44,1.44,0,0,0,18.44,4.13ZM12,5.82A6.18,6.18,0,1,0,18.17,12,6.19,6.19,0,0,0,12,5.82Zm0,2.06A4.12,4.12,0,1,1,7.89,12,4.1,4.1,0,0,1,12,7.88Z"></path></svg></a></li>
-                                        <li><a href=""><svg viewBox="0 0 24 16.94" class="sb-icon social-nav__icon"><path d="M23.69,2.55A2.73,2.73,0,0,0,21.25.26a163.11,163.11,0,0,0-18.5,0A2.73,2.73,0,0,0,.31,2.55a57.14,57.14,0,0,0,0,11.84,2.72,2.72,0,0,0,2.44,2.29,163.11,163.11,0,0,0,18.5,0,2.72,2.72,0,0,0,2.44-2.29A57.14,57.14,0,0,0,23.69,2.55Zm-14.14,9V4.86L16,8.2Z"></path></svg></a></li>
+                                        <li><a href=""><svg viewBox="0 0 12.35 24" class="sb-icon social-nav__icon">
+                                                    <path
+                                                        d="M9.09,0C5.86,0,3.65,2,3.65,5.64V8.79H0v4.26H3.65V24H8V13.05h3.64l.55-4.26H8V6.06C8,4.83,8.35,4,10.11,4h2.24V.17A30.13,30.13,0,0,0,9.09,0Z">
+                                                    </path>
+                                                </svg></a></li>
+                                        <li><a href=""><svg viewBox="0 0 24 19.69" class="sb-icon social-nav__icon">
+                                                    <path
+                                                        d="M24,2.33a9.57,9.57,0,0,1-2.83.78A5,5,0,0,0,23.34.36a9.75,9.75,0,0,1-3.13,1.21A4.89,4.89,0,0,0,16.62,0a5,5,0,0,0-4.93,5,5.22,5.22,0,0,0,.13,1.13A13.91,13.91,0,0,1,1.67.91,5,5,0,0,0,3.2,7.55,4.81,4.81,0,0,1,1,6.92.2.2,0,0,0,1,7a5,5,0,0,0,4,4.87A5,5,0,0,1,3.62,12,5.64,5.64,0,0,1,2.69,12a5,5,0,0,0,4.6,3.45,9.86,9.86,0,0,1-6.12,2.13A11.48,11.48,0,0,1,0,17.46a13.85,13.85,0,0,0,7.55,2.23c9.05,0,14-7.57,14-14.14,0-.22,0-.43,0-.65A10,10,0,0,0,24,2.33">
+                                                    </path>
+                                                </svg></a></li>
+                                        <li><a href=""><svg viewBox="0 0 24 24" class="sb-icon social-nav__icon">
+                                                    <path
+                                                        d="M7,0A7,7,0,0,0,0,7V17a7,7,0,0,0,7,7h10.1a7,7,0,0,0,7-7V7a7,7,0,0,0-6.95-7ZM7,2.06h10.1A4.86,4.86,0,0,1,21.94,7V17a4.86,4.86,0,0,1-4.89,4.9H7A4.86,4.86,0,0,1,2.06,17V7A4.86,4.86,0,0,1,7,2.06ZM18.44,4.13a1.44,1.44,0,1,0,1.44,1.44A1.44,1.44,0,0,0,18.44,4.13ZM12,5.82A6.18,6.18,0,1,0,18.17,12,6.19,6.19,0,0,0,12,5.82Zm0,2.06A4.12,4.12,0,1,1,7.89,12,4.1,4.1,0,0,1,12,7.88Z">
+                                                    </path>
+                                                </svg></a></li>
+                                        <li><a href=""><svg viewBox="0 0 24 16.94" class="sb-icon social-nav__icon">
+                                                    <path
+                                                        d="M23.69,2.55A2.73,2.73,0,0,0,21.25.26a163.11,163.11,0,0,0-18.5,0A2.73,2.73,0,0,0,.31,2.55a57.14,57.14,0,0,0,0,11.84,2.72,2.72,0,0,0,2.44,2.29,163.11,163.11,0,0,0,18.5,0,2.72,2.72,0,0,0,2.44-2.29A57.14,57.14,0,0,0,23.69,2.55Zm-14.14,9V4.86L16,8.2Z">
+                                                    </path>
+                                                </svg></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -273,7 +296,8 @@
                                                 <div class="title-contain-span">
                                                     <span>Strengthening Communities</span>
                                                 </div>
-                                                <h2>How a mailbox in a Starbucks inspires kindness in a Calif. community</h2>
+                                                <h2>How a mailbox in a Starbucks inspires kindness in a Calif. community
+                                                </h2>
                                             </div>
                                         </a>
                                     </article>
@@ -355,7 +379,12 @@
                                 </div>
                                 <div class="link-contein">
                                     <a href="" class="block-link">View More
-                                        <svg viewBox="0 0 24 24" class="sb-icon sb-block-link__icon" aria-hidden="true"><title>chevron right thin</title><polygon points="8.11 20 6.89 18.63 14.36 12 6.89 5.37 8.11 4 17.11 12 8.11 20"></polygon></svg>
+                                        <svg viewBox="0 0 24 24" class="sb-icon sb-block-link__icon" aria-hidden="true">
+                                            <title>chevron right thin</title>
+                                            <polygon
+                                                points="8.11 20 6.89 18.63 14.36 12 6.89 5.37 8.11 4 17.11 12 8.11 20">
+                                            </polygon>
+                                        </svg>
                                     </a>
                                 </div>
                             </div>
@@ -367,7 +396,11 @@
                     <p>Original documentaries, films, series, podcasts and more celebrating community, people, coffee and the human spirit. Bringing to life what we believe, the way we see the world and what inspires us.</p>
                     <div class="link-contein">
                         <a href="" class="block-link">See All
-                            <svg viewBox="0 0 24 24" class="sb-icon sb-block-link__icon" aria-hidden="true"><title>chevron right thin</title><polygon points="8.11 20 6.89 18.63 14.36 12 6.89 5.37 8.11 4 17.11 12 8.11 20"></polygon></svg>
+                            <svg viewBox="0 0 24 24" class="sb-icon sb-block-link__icon" aria-hidden="true">
+                                <title>chevron right thin</title>
+                                <polygon points="8.11 20 6.89 18.63 14.36 12 6.89 5.37 8.11 4 17.11 12 8.11 20">
+                                </polygon>
+                            </svg>
                         </a>
                     </div>
                 </section>
@@ -388,10 +421,26 @@
                 </nav>
                 <div class="social-nav">
                     <ul class="social-nav-ul">
-                        <li><a href=""><svg viewBox="0 0 12.35 24" class="sb-icon social-nav__icon"><path d="M9.09,0C5.86,0,3.65,2,3.65,5.64V8.79H0v4.26H3.65V24H8V13.05h3.64l.55-4.26H8V6.06C8,4.83,8.35,4,10.11,4h2.24V.17A30.13,30.13,0,0,0,9.09,0Z"></path></svg></a></li>
-                        <li><a href=""><svg viewBox="0 0 24 19.69" class="sb-icon social-nav__icon"><path d="M24,2.33a9.57,9.57,0,0,1-2.83.78A5,5,0,0,0,23.34.36a9.75,9.75,0,0,1-3.13,1.21A4.89,4.89,0,0,0,16.62,0a5,5,0,0,0-4.93,5,5.22,5.22,0,0,0,.13,1.13A13.91,13.91,0,0,1,1.67.91,5,5,0,0,0,3.2,7.55,4.81,4.81,0,0,1,1,6.92.2.2,0,0,0,1,7a5,5,0,0,0,4,4.87A5,5,0,0,1,3.62,12,5.64,5.64,0,0,1,2.69,12a5,5,0,0,0,4.6,3.45,9.86,9.86,0,0,1-6.12,2.13A11.48,11.48,0,0,1,0,17.46a13.85,13.85,0,0,0,7.55,2.23c9.05,0,14-7.57,14-14.14,0-.22,0-.43,0-.65A10,10,0,0,0,24,2.33"></path></svg></a></li>
-                        <li><a href=""><svg viewBox="0 0 24 24" class="sb-icon social-nav__icon"><path d="M7,0A7,7,0,0,0,0,7V17a7,7,0,0,0,7,7h10.1a7,7,0,0,0,7-7V7a7,7,0,0,0-6.95-7ZM7,2.06h10.1A4.86,4.86,0,0,1,21.94,7V17a4.86,4.86,0,0,1-4.89,4.9H7A4.86,4.86,0,0,1,2.06,17V7A4.86,4.86,0,0,1,7,2.06ZM18.44,4.13a1.44,1.44,0,1,0,1.44,1.44A1.44,1.44,0,0,0,18.44,4.13ZM12,5.82A6.18,6.18,0,1,0,18.17,12,6.19,6.19,0,0,0,12,5.82Zm0,2.06A4.12,4.12,0,1,1,7.89,12,4.1,4.1,0,0,1,12,7.88Z"></path></svg></a></li>
-                        <li><a href=""><svg viewBox="0 0 24 16.94" class="sb-icon social-nav__icon"><path d="M23.69,2.55A2.73,2.73,0,0,0,21.25.26a163.11,163.11,0,0,0-18.5,0A2.73,2.73,0,0,0,.31,2.55a57.14,57.14,0,0,0,0,11.84,2.72,2.72,0,0,0,2.44,2.29,163.11,163.11,0,0,0,18.5,0,2.72,2.72,0,0,0,2.44-2.29A57.14,57.14,0,0,0,23.69,2.55Zm-14.14,9V4.86L16,8.2Z"></path></svg></a></li>
+                        <li><a href=""><svg viewBox="0 0 12.35 24" class="sb-icon social-nav__icon">
+                                    <path
+                                        d="M9.09,0C5.86,0,3.65,2,3.65,5.64V8.79H0v4.26H3.65V24H8V13.05h3.64l.55-4.26H8V6.06C8,4.83,8.35,4,10.11,4h2.24V.17A30.13,30.13,0,0,0,9.09,0Z">
+                                    </path>
+                                </svg></a></li>
+                        <li><a href=""><svg viewBox="0 0 24 19.69" class="sb-icon social-nav__icon">
+                                    <path
+                                        d="M24,2.33a9.57,9.57,0,0,1-2.83.78A5,5,0,0,0,23.34.36a9.75,9.75,0,0,1-3.13,1.21A4.89,4.89,0,0,0,16.62,0a5,5,0,0,0-4.93,5,5.22,5.22,0,0,0,.13,1.13A13.91,13.91,0,0,1,1.67.91,5,5,0,0,0,3.2,7.55,4.81,4.81,0,0,1,1,6.92.2.2,0,0,0,1,7a5,5,0,0,0,4,4.87A5,5,0,0,1,3.62,12,5.64,5.64,0,0,1,2.69,12a5,5,0,0,0,4.6,3.45,9.86,9.86,0,0,1-6.12,2.13A11.48,11.48,0,0,1,0,17.46a13.85,13.85,0,0,0,7.55,2.23c9.05,0,14-7.57,14-14.14,0-.22,0-.43,0-.65A10,10,0,0,0,24,2.33">
+                                    </path>
+                                </svg></a></li>
+                        <li><a href=""><svg viewBox="0 0 24 24" class="sb-icon social-nav__icon">
+                                    <path
+                                        d="M7,0A7,7,0,0,0,0,7V17a7,7,0,0,0,7,7h10.1a7,7,0,0,0,7-7V7a7,7,0,0,0-6.95-7ZM7,2.06h10.1A4.86,4.86,0,0,1,21.94,7V17a4.86,4.86,0,0,1-4.89,4.9H7A4.86,4.86,0,0,1,2.06,17V7A4.86,4.86,0,0,1,7,2.06ZM18.44,4.13a1.44,1.44,0,1,0,1.44,1.44A1.44,1.44,0,0,0,18.44,4.13ZM12,5.82A6.18,6.18,0,1,0,18.17,12,6.19,6.19,0,0,0,12,5.82Zm0,2.06A4.12,4.12,0,1,1,7.89,12,4.1,4.1,0,0,1,12,7.88Z">
+                                    </path>
+                                </svg></a></li>
+                        <li><a href=""><svg viewBox="0 0 24 16.94" class="sb-icon social-nav__icon">
+                                    <path
+                                        d="M23.69,2.55A2.73,2.73,0,0,0,21.25.26a163.11,163.11,0,0,0-18.5,0A2.73,2.73,0,0,0,.31,2.55a57.14,57.14,0,0,0,0,11.84,2.72,2.72,0,0,0,2.44,2.29,163.11,163.11,0,0,0,18.5,0,2.72,2.72,0,0,0,2.44-2.29A57.14,57.14,0,0,0,23.69,2.55Zm-14.14,9V4.86L16,8.2Z">
+                                    </path>
+                                </svg></a></li>
                     </ul>
                 </div>
                 <nav class="legal-nav">
