--- a/stories.html
+++ b/stories.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stories</title>
     <link rel="shortcut icon" href="https://stories.starbucks.com/favicon.ico">
-    <link rel="stylesheet" href="/less/stories.css">
+    <link rel="stylesheet" href="less/stories.css">
     <link rel="stylesheet" href="media/stories-media.css">
 </head>
 
