--- a/stories.html
+++ b/stories.html
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                 </div>
-                <section class="content-wrap">
+                <section class="content-wrap content-wrap-mobile-first">
                     <div class="layout-2col">
                         <aside class="layout-sidebar">
                             <h2>Stay In Touch</h2>
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="content-wrap">
+                <section class="content-wrap content-wrap-mobile">
                     <h1 class="title-center">Stories</h1>
                     <div class="tabs-viewed">
                         <div class="tab-control">
@@ -391,7 +391,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="content-wrap">
+                <section class="content-wrap content-wrap-mobile">
                     <h1 class="title-center">Starbucks Productions</h1>
                     <p>Original documentaries, films, series, podcasts and more celebrating community, people, coffee and the human spirit. Bringing to life what we believe, the way we see the world and what inspires us.</p>
                     <div class="link-contein">
