--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,7 @@
     </style>
     <link rel="stylesheet" href="media/media.css">
     <link rel="stylesheet" href="media/menu-media.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 
 <body>
