--- a/starbucks.html
+++ b/starbucks.html
@@ -14,6 +14,7 @@
         @import url("less/section.css");
     </style>
     <link rel="stylesheet" href="media/media.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 
 <body>
