--- a/stories.html
+++ b/stories.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="https://stories.starbucks.com/favicon.ico">
     <link rel="stylesheet" href="less/stories.css">
     <link rel="stylesheet" href="media/stories-media.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 
 <body>
