--- a/starbucks.html
+++ b/starbucks.html
@@ -37,7 +37,7 @@
                 <nav class="menu-nav">
                     <ul>
                         <li>
-                            <a href="">MENU</a>
+                            <a href="menu.html">MENU</a>
                         </li>
                         <li class="p-left">
                             <a href="">REWARDS</a>
@@ -128,7 +128,7 @@
             <div class="text-wraper">
                 <h2><span>Give Together</span></h2>
                 <div class="text">This December, we’re supporting three organizations that give back to communities across the U.S. When you give to any of them, The Starbucks Foundation will match up to $200,000 for each organization.</div>
-                <a href="" class="button give_today">Give today</a>
+                <a href="stories.html" class="button give_today">Give today</a>
             </div>
         </div>
     </section>
